# AeroInspect

./: .env.example  .gitignore  AGENTS.md  PLAN.md  PROJECT_OVERVIEW.md  README.md  aeroinspect_dashboard.html  app.py  pyproject.toml
.streamlit/: config.toml
agents/: grounding.py  reporter.py  validator.py  vision.py
core/: config.py  imaging.py  llm.py  orchestrator.py  schemas.py
data/parts_catalog/: 00_general.md  01_tail.md  02_wing_pylon.md  03_landing_gear.md  04_fuselage_canopy.md  05_sensors_probes.md  06_tail_damage.md  07_service_bulletins.md  08_walkaround_inspection.md
scripts/: setup_file_search.py
tests/: __init__.py  test_e2e.py
ui/: components.py  theme.py
